Fix z-index

--- a/public/css/absolute.less
+++ b/public/css/absolute.less
@@ -22,6 +22,10 @@ body {
 	color: #222;
 }
 
+.uk-modal {
+	z-index: 20000;
+}
+
 ul.title {
 	color: @text;
 }
